# Trade-Model-Consideration

./: ,gitignore  .python_version  LICENSE  README.md  README_portfolio_rebalancer.md  auxilliary_trade_ruleset  config.ini  configure.yaml.sample  credentials.list.example  docker_compose.yaml  main  poetry_installation_notes  pre_commit_config.yaml  pyproject.toml  simplified_strategy_weighting
Unfinished/: backtest_engine_flow  backtest_flags_limits  poetry installation notes  poetry lock  put_volatility_harvest  three_simple_models  vol_smile_grad_realtime  vol_smile_grad_visual
audit/: __init__.py  audit_tools  audit_tools.py  email_config  email_config.py  env_check  env_check.py
control_logic/: date_time_operations_commander  date_time_ops_commander.py  ml_ai_notes_template  risk_execution_protocol  risk_execution_protocol.py  signal_isolation_system  signal_isolation_system.py  trade_coordinator  trade_coordinator.py
core/: ML_oversold_workflow  audit_logger  audit_logger.py  bin_logic_shared.py  config_loader_module  config_loader_module.py  ml_oversold_workflow.py
data/: positions.csv
enforcer/: enforce_allocation_rules_fullSet.py  enforce_allocation_rules_oneTOfive  enforce_allocation_rules_oneTOfive.py  enforce_allocation_rules_sixTOeleven  intro_change_control.py
exclusions/: exclusions_2019  exclusions_2019.py  exclusions_2020  exclusions_2020.py  exclusions_2021  exclusions_2021.py  exclusions_2022  exclusions_2022.py  exclusions_2023  exclusions_2023,py  exclusions_2024  exclusions_2025
har_logging_proxy/: har_dump.py  run
ikbr_project/: .env  (+3 more)
(+76 files in other folders)
